
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Feb-19 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    Add ZONE_CONTAINER support to the ID_PCB_HIGHLIGHT_BUTT tool and
    WinEDA_PcbFrame::DrawHightLight().  Added TYPEZONE_CONTAINER to
    GENERAL_COLLECTOR::AllButZones[] so that containers are editable even
    when the "Show Zones" toggle is off.  This came from using the software
    and realizing that if something is visible (zone containers remain visible
    even when Show Zones is off) then it should be selectable.  Otherwise it is
    confusing and frustrating.


2008-Feb-18 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Start to use BOARD::GetLayerName() in anticipation of configurable layer
    names per board.
  * Comment out a printf() which will lock up pcbnew when
    it is run under kicad project manager and the interprocess fifo gets filled.
  * Cross probe was not showing the not found message properly.  wxString was
    being used for two purposes, input and Printf() destination.
+gerbview
    Now loads all gerber files given on the command line, not just one.  The
    first file is loaded into layer 1 (index 0), the second one is loaded
    into layer 2 (index 1) etc.


2008-Feb-18 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema
    Fixed bug in gen bill of material (dialog_build_BOM.cpp):
    eeschema crashed when created a B.O.M. (i think: unicode version only)


2008-Feb-18 UPDATE Igor Plyatov <plyatov@mail.ru>
================================================================================
+eeschema
    Added menu View with all possible elements from the top toolbar.