@@ -5,6 +5,15 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+
+
+2008-Feb-20 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++pcbnew
+    specctra_export.cpp fixed the offset problem with freerouter.net.
+    http://tech.groups.yahoo.com/group/kicad-devel/message/1076
+
+
 2008-Feb-19 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
 +pcbnew
